--- a/src/app/components/delete-empleado/delete-empleado.component.css
+++ b/src/app/components/delete-empleado/delete-empleado.component.css
@@ -554,6 +554,7 @@
     text-align: center;
   }
 
+  
 
   .texMotivo {
     width: 99%; 
@@ -573,6 +574,8 @@
                 0 0 25px #55ff06d3
 }
 
+/*estilos para las tablas de historial de empleados eliminados */
+
 .centrado {
   display: flex;
   justify-content: center;
@@ -580,26 +583,15 @@
 }
 
 .contenido-interno {
-  
-  
-  
-
- 
-  
   width: 90%;
- 
-  
-  background-color: #7e7b7b;
-  
+  background-color: #7e7b7b; 
   border: 3px solid #000000;
   border-radius: 20px; 
   margin-top: 5px;
-  
 }
 
-
+/*esto h2*/
 .texEmpl {
-
   font-size:2em; 
   font-weight: 300;
   text-align: center;
@@ -610,6 +602,166 @@
   margin-top: 7px;
 }
 
+/*estilos del buscador*/
+*{
+	border: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+:root {
+	font-size: calc(16px + (24 - 16)*(100vw - 320px)/(1920 - 320));
+}
+button, input {
+	font: 1em Hind, sans-serif;
+	line-height: 1.5em;
+}
+input {
+	color: #171717;
+}
+.formBuscar {
+	display: flex;
+}
+
+.formBuscar input,
+.buttBuscar, 
+.buttBuscar:before, 
+.buttBuscar:after {
+	transition: all 0.25s ease-out;
+}
+.formBuscar input,
+.buttBuscar {
+	width: 3em;
+	height: 3em;
+}
+.formBuscar input:invalid:not(:focus),
+.buttBuscar {
+	cursor: pointer;
+}
+.formBuscar,
+.formBuscar input:focus,
+.formBuscar input:valid  {
+	width: 100%;
+}
+.formBuscar input:focus,
+.formBuscar input:not(:focus) + .buttBuscar:focus {
+	outline: transparent;
+}
+.formBuscar {
+	margin: auto;
+  margin-right: -20px;
+	padding: 1.5em;
+	justify-content: right;
+	max-width: 30em;
+}
+.formBuscar input {
+	background: transparent;
+	border-radius: 1.5em;
+	box-shadow: 0 0 0 0.4em #171717 inset;
+	padding: 0.75em;
+	transform: translate(0.5em,0.5em) scale(0.5);
+	transform-origin: 100% 0;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+}
+.formBuscar input::-webkit-search-decoration {
+	-webkit-appearance: none;
+}
+.formBuscar input:focus,
+.formBuscar input:valid {
+	background: #fff;
+	border-radius: 0.375em 0 0 0.375em;
+	box-shadow: 0 0 0 0.1em #d9d9d9 inset;
+	transform: scale(1);
+}
+.buttBuscar {
+	background: #171717;
+	border-radius: 0 0.75em 0.75em 0 / 0 1.5em 1.5em 0;
+	padding: 0.75em;
+	position: relative;
+	transform: translate(0.25em,0.25em) rotate(45deg) scale(0.25,0.125);
+	transform-origin: 0 50%;
+}
+.buttBuscar:before, 
+.buttBuscar:after {
+	content: "";
+	display: block;
+	opacity: 0;
+	position: absolute;
+}
+.buttBuscar:before {
+	border-radius: 50%;
+	box-shadow: 0 0 0 0.2em #f1f1f1 inset;
+	top: 0.75em;
+	left: 0.75em;
+	width: 1.2em;
+	height: 1.2em;
+}
+.buttBuscar:after {
+	background: #f1f1f1;
+	border-radius: 0 0.25em 0.25em 0;
+	top: 51%;
+	left: 51%;
+	width: 0.75em;
+	height: 0.25em;
+	transform: translate(0.2em,0) rotate(45deg);
+	transform-origin: 0 50%;
+}
+.buttBuscar span {
+	display: inline-block;
+	overflow: hidden;
+	width: 1px;
+	height: 1px;
+}
+
+/* Active state */
+.formBuscar input:focus + .buttBuscar,
+.formBuscar input:valid + .buttBuscar {
+	background: #2762f3;
+	border-radius: 0 0.375em 0.375em 0;
+	transform: scale(1);
+}
+.formBuscar input:focus + .buttBuscar:before, 
+.formBuscar input:focus + .buttBuscar:after,
+.formBuscar input:valid + .buttBuscar:before, 
+.formBuscar input:valid + .buttBuscar:after {
+	opacity: 1;
+}
+.formBuscar input:focus + .buttBuscar:hover,
+.formBuscar input:valid + .buttBuscar:hover,
+.formBuscar input:valid:not(:focus) + .buttBuscar:focus {
+	background: #0c48db;
+}
+.formBuscar input:focus + .buttBuscar:active,
+.formBuscar input:valid + .buttBuscar:active {
+	transform: translateY(1px);
+}
+
+@media screen and (prefers-color-scheme: dark) {
+	.inputBuscar {
+		color: #f1f1f1;
+	}
+	
+	.formBuscar input {
+		box-shadow: 0 0 0 0.4em #f1f1f1 inset;
+	}
+	.formBuscar input:focus,
+	.formBuscar input:valid {
+		background: #3d3d3d;
+		box-shadow: 0 0 0 0.1em #3d3d3d inset;
+	}
+	.buttBuscar {
+		background: #f1f1f1;
+	}
+}
+
+
+
+
+
+
+/*tabla de contenido*/
 .container {
  text-align: left;
  overflow: hidden;
@@ -642,8 +794,6 @@
   text-align: center;
 }
 
-
-
 .motivoEliminacion {
   max-width: 390px; 
   overflow: hidden;
@@ -655,8 +805,6 @@
   white-space: nowrap;
 }
 
-
-
 .container td, .container th {
   padding-bottom: 2%;
   padding-top: 2%;
@@ -664,14 +812,11 @@
   padding-right: 2%; 
   font-family: 'Arial', sans-serif;
   color: #000000;
-
 }
-
 
 .container tr:nth-child(odd) {
     background-color: #AAAAAA;
 }
-
 
 .container tr:nth-child(even) {
     background-color: #CCCCCC;
@@ -716,5 +861,12 @@
     transition-duration: 0.3s;
     transition-property: all;
   transition-timing-function: line;
+}
+
+/*quitar las fechas de la parte derecha*/
+.formBuscar input[type="number"]::-webkit-inner-spin-button,
+.formBuscar input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
