--- a/src/app/components/horas-extras/horas-extras.component.html
+++ b/src/app/components/horas-extras/horas-extras.component.html
@@ -33,7 +33,7 @@
                         <li><a class="a_menu" routerLink="/asistencia" routerLinkActive="active">R.Asistencia</a></li>
                         <li><a class="a_menu_set" routerLink="/horasExtras" routerLinkActive="active" >R.Horas Extras</a></li>
                         <li><a class="a_menu" routerLink="/incapacidad" routerLinkActive="active">R.Incapacidad</a></li>
-                        <li><a class="a_menu" href="#">Inventario</a></li>
+                        <li><a class="a_menu" routerLink="/InventarioGeneral" routerLinkActive="active">Inventario</a></li>
                         <li><a class="a_menu" routerLink="/deleteEmpleado" routerLinkActive="active">Borrar Empleado</a></li>
                     </ul> 
                 </nav>
