--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -39,7 +39,7 @@
                     <li><a routerLink="/incapacidad" routerLinkActive="active" class="bolita bolita-3"></a><span class="nombretres">Incapacidad</span></li>
                     <li><a routerLink="/regitroEmpleado" routerLinkActive="active" class="cuadradouno">Regitrar Nuevo Empleado </a></li>
                     <li><a routerLink="/deleteEmpleado" routerLinkActive="active" class="cuadradodos">Borrar Empleado</a></li>
-                    <li><a href="#" class="cuadradotres">Inventario</a></li>
+                    <li><a routerLink="/InventarioGeneral" routerLinkActive="active" class="cuadradotres">Inventario</a></li>
                 </ul>
             </nav>
             <div class="cerrar-seccion">
