--- a/src/app/components/inventario-gereral/inventario-gereral.component.css
+++ b/src/app/components/inventario-gereral/inventario-gereral.component.css
@@ -5,9 +5,11 @@
     left: 0.1%;
     width: 100%;
     height: 100%;
+   /* padding: 40px;*/
+    /*transform: translate(-50%, -50%); */
   }
 
-  .abrir-navegacion {
+.abrir-navegacion {
     position: fixed; 
     top: 3.5%; 
     right: 80px; 
@@ -83,6 +85,7 @@
   
   .columna-izquierda{
     flex-basis: 5%;
+    
     flex-grow: 1; 
    background-color: #000000;
    
@@ -91,39 +94,49 @@
     flex-basis: 5%;
     flex-grow: 1; 
     background-color: #000000;
+    
   }
   
   .columna-central {
     flex-basis: 1250px;
     background-color: #333;
     border-radius: 20px;
-}
+  }
+
 
 /*titulo de la empresa*/
 .estilo {
-    position: fixed;
-    top: 0;
-    right: 35%;
-    transform: translateX(-50%, -50%); 
-    width: 400px;
-    height: 60px;
-    z-index: 1000;
-    /*background-color: #000000;*/
+  position: fixed;
+  top: 0;
+  right: 35%;
+  transform: translateX(-50%, -50%); 
+  
+  width: 400px;
+  height: 60px;
+  z-index: 1000;
+  /*background-color: #000000;*/
+}
+
+
+.titulo-empresa{
+
+  color: #ffffff;
+  font: normal 140px Varela Round, sans-serif;
+
+  left: 0;
+  letter-spacing: 10px;
+  text-align: center;
+  text-transform: uppercase;
+  width: 100%;
+  animation: animar linear 5000ms infinite;
+ 
+  font-size: 40px;
+  margin-top: 2px;
+  
+  
   }
 
-  .titulo-empresa{
-    color: #ffffff;
-    font: normal 140px Varela Round, sans-serif;
-    left: 0;
-    letter-spacing: 10px;
-    text-align: center;
-    text-transform: uppercase;
-    width: 100%;
-    animation: animar linear 5000ms infinite;
-    font-size: 40px;
-    margin-top: 2px;
-  }
-
+  
   @keyframes animar {
     0% {
       text-shadow:
@@ -177,402 +190,94 @@
 
 /*efectos de navegacion*/
 .efectos-navegación { 
-    position: fixed;
-    top: 0;
-    left: 12%;
-    height: 40px;
-    width: 77%;
-    font-family: "Inter", sans-serif;
-    color: #2bff00;
-    display: flex;
-    align-items: center;
-    font-size: 1.3rem;
-    margin-top: 50px;
-    margin-left: 68px;
-    z-index: 1000;
-    /*background-color: #555555;*/
-    background-color: #333;
-    border-radius: 20px
-   }
- 
-  .a_menu {
-      color: inherit;
-      text-decoration: none;
-      transition: 0.25s ease;
-  }
-  
-  .a_menu_set{
-      color: #ff0000;
-      text-decoration: none;
-      transition: 0.25s ease;
-  }
-
-  .menu-central ul {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .menu-central ul li {
-    margin-left: 0.75em;
-    margin-right: 0.75em;
-  }
-  .menu-central ul:hover a {
-    color: #ffffff;
-  }
-  .menu-central ul:hover a:hover {
-    color: #ff0000;
-    box-shadow: 0 2px 0 0 currentcolor;
-}
-
-/*-----------------------------------------------*/
-
-/*tex de componete*/
-.cont_registro {
-  position: relative;
-  top: auto;
-  left: 6%;
-  width: 300px;
+  position: fixed;
+  top: 0;
+  left: 12%;
   height: 40px;
-  color: #000000;
-  background-color: #d6d6d6;
-  z-index: 2; 
-  border: 3px solid #000000;
+  width: 77%;
+  font-family: "Inter", sans-serif;
+  color: #2bff00;
+  display: flex;
+  align-items: center;
+  font-size: 1.3rem;
+  margin-top: 50px;
+  margin-left: 68px;
+  z-index: 1000;
+  /*background-color: #555555;*/
+  background-color: #333;
+  border-radius: 20px
+ }
+ 
+   .a_menu {
+     color: inherit;
+     text-decoration: none;
+     transition: 0.25s ease;
+   }
+
+   
+    .a_menu_set{
+        color: #ff0000;
+        text-decoration: none;
+        transition: 0.25s ease;
+    }
+ 
+   .menu-central ul {
+     display: flex;
+     flex-wrap: wrap;
+   }
+   .menu-central ul li {
+     margin-left: 0.75em;
+     margin-right: 0.75em;
+   }
+   .menu-central ul:hover a {
+     color: #ffffff;
+   }
+   .menu-central ul:hover a:hover {
+     color: #ff0000;
+     box-shadow: 0 2px 0 0 currentcolor;
+}
+	
+
+/*----------------------------------*/
+
+/*cargando informacion al servidor*/
+.cargando-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000; 
+}
+
+.cargando-alert {
+  background: #fff;
+  padding: 20px;
   border-radius: 10px;
-  }
-
-  /*texto borrar empleado*/
-  .text_registro {
-    margin-top: 10px;
-    flex-direction: column;
-    justify-content: center; 
-    height: 6vh; 
-    font-size: 1.5rem;
-    border: #000000;
-    border-radius: 10px;
-    position: relative; 
-    margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
-/*buscar*/
-  .cont_buscar{
-    position: relative;
-    margin-left: 5%;
-    top: auto;
-    width: 90%;
-    transform: translateY(-2%); 
-    background-color: #7e7b7b;
-    z-index: 1; 
-    border: 3px solid #000000;
-    border-radius: 20px;
-    align-items: center;
-  }
-  
-  .form {
-    position: relative;
-    right: 5px;
-    left: 5px;
-    width: 100%;
-    height: auto;
-    /* background-color: #007bff;*/
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between; 
-    margin: -2px;
-  }
-
-  /* Estilo para campos de entrada requeridos */
-  .requiered {
-    color: red;
-    margin: 3px;
-    margin-top: 10px;
-  }
-
-  .cont_select {
-    position: relative;
-    top: 20px;
-    width: 210px;
-    display: flex;
-    flex-direction: row; 
-    align-items: center; 
-   /* background: #2bff00;*/
-    right: 13%;
-  }
-
-  .cont_posicion{
-    position: relative;
-    top: -25px;
-    left: 17%;
-    width: 280px;
-   /* background: #333;*/
-  }
-
-  .cont_input {
-    display: flex;
-    flex-direction: row; 
-    align-items: center; 
-  }
-
-  .label_ {
-    font-weight: bold;
-    transition: color 0.5s;
-    color: #131212e0;
-    text-align: center;
-    font-size: 1.1rem;
-  }
-
-  .input_ {
-    width: 280px;
-    padding: 5px;
-    border: 1px solid #000000;
-    border-radius: 5px;
-    font-size: 1rem;
-  }
-  .input_:hover {
-    border-radius: 10px;
-    box-shadow: 0 0 5px #55ff06d3,
-                0 0 25px #55ff06d3,
-                0 0 25px #55ff06d3,
-                0 0 25px #55ff06d3
-  }
-
-  .select_ {
-    margin-top: -2px; 
-    font-size: 1rem;
-    padding: 5px;
-    border: 1px solid #000000;
-    border-radius: 5px;
-  }
-
-  .select_:hover {
-    border-radius: 10px;
-    box-shadow: 0 0 5px #55ff06d3,
-                0 0 25px #55ff06d3,
-                0 0 25px #55ff06d3,
-                0 0 25px #55ff06d3
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.3);
+  border-top: 4px solid #007bff; /* Color del spinner */
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 2s linear infinite;
 }
 
-.contenerdo {
-    display: flex; 
-    justify-content: space-between; 
-    align-items: flex-start;
-    /*background: #007bff;*/
-  }
-
-  /*cargando informacion al servidor*/
-  .cargando-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1000; 
-  }
-
-  .cargando-alert {
-    background: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-
-  .spinner {
-    border: 4px solid rgba(0, 0, 0, 0.3);
-    border-top: 4px solid #007bff; /* Color del spinner */
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    animation: spin 2s linear infinite;
-  }
-
-  @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
-/*contenedor izquierda*/
-.izquierda {
-    flex: 1; 
-    padding: 5px; 
-    margin-top: 1%;
-    /* background-color: #f0f0f0; */
-  }
-
-  .cont{
-    position: relative;
-  
-    width: 99%;
-    transform: translateY(-2%); 
-    background-color: #7e7b7b;
-    z-index: 1; 
-    border: 3px solid #000000;
-    border-radius: 20px;
-  }
-
-/*datos*/
-.perfil {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-    border-radius: 15px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    margin: 0 auto;
-    overflow: hidden;
-    position: relative;
-    font-family: Arial, sans-serif;
-    background: repeating-linear-gradient(45deg, transparent 1px, rgba(255, 255, 255, 0.2) 2px, transparent 3px, rgba(255, 255, 255, 0.3) 4px),
-    linear-gradient(-245deg, transparent 40%, rgba(255, 255, 255, 0.2) 70%, rgba(255, 255, 255, 0.5) 90%);
-    background-color: #7e7b7b;
-  }
-
-  .imagen img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50px;
-    object-fit: cover;
-    box-shadow: 8px 10px 0 rgba(0, 0, 0, 0.719);
-
-    margin: 3px;
-    border: 5px solid #fff;
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-  }
-
-  .imagen img:hover {
-    transform: scale(1.2);
-    transition: transform 0.4s ease;
-  }
-
-  .nombre_apellido {
-    font-size: 30px;
-    font-weight: bold;
-    color: #fff; 
-    margin: 0;
-    text-align: center;
-    font-family: monospace;
-  }
-
-  .id {
-    font-size: 22px;
-    color: #000000; 
-    margin: 0;
-    text-align: center;
-  }
-
-  .datos-personales, .horario-trabajo {
-    text-align: left;
-    margin-top: 20px;
-    padding-left: 20px;
-  }
-
-  .datos-personales p, .horario-trabajo p {
-    font-size: 18px;
-    color: rgba(0, 0, 0, 0.993);
-    margin: 8px 0;
-  }
-
-  .datos-personales  strong, .horario-trabajo  strong {
-    font-weight: bold;
-    color: rgba(0, 0, 0, 0.904);
-    margin-right: 10px;
-} 
-
-/*style butt*/
-.botones-container {
-    display: flex; 
-    justify-content: space-between; 
-    width: 70%; 
-    margin: 0 auto; 
-    align-items: center;
-    /*background: #000000;*/
-  }
-  
-  .butteliminar, .buttenviar {
-    flex: 1;
-    padding: 10px 20px;
-    font-size: 18px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin: 15px;
-  }
-
-  .buttenviar:hover  {
-    background-color: #16cf82;
-    border-radius: 15px;
-    box-shadow: 0 0 5px #55ff06d3,
-                0 0 25px #55ff06d3,
-                0 0 25px #55ff06d3,
-                0 0 25px #55ff06d3
-  }
-
-  .butteliminar:hover{
-    background-color: #ee1645;
-    border-radius: 15px;
-    box-shadow: 0 0 5px #ff0037be,
-                0 0 25px  #ff0037be,
-                0 0 25px  #ff0037be,
-                0 0 25px #ff0037be
-}
-
-/*contenedor derecha*/
-.derecha {
-    flex: 1; 
-    padding: 5px; 
-    margin-top: 1%;
-  /* background-color: rgb(70, 70, 70); */
-  }
-
-  .info {
-    font-size: 28px;
-    font-weight: bold; 
-    text-align: center; 
-    color: #333; 
-    margin-top: 10px;
-  }
-
-  .form_motivo{
-    align-items: center;
-    margin: 10px;
-  }
-
-
-  .laber_motivo {
-    font-weight: bold; 
-    font-size: 18px; 
-    color: #070707;
-    text-align: center;
-  }
-
-  
-
-  .texMotivo {
-    width: 99%; 
-    padding: 10px; 
-    border: 1px solid #ccc; 
-    border-radius: 10px;
-    font-size: 16px; 
-    color: #0a0a0a; 
-    text-align: center;
-  }
-
-  .texMotivo:hover  {
-    border-radius: 15px;
-    box-shadow: 0 0 5px #55ff06d3,
-                0 0 25px #55ff06d3,
-                0 0 25px #55ff06d3,
-                0 0 25px #55ff06d3
-}
 
 /*estilos para las tablas de historial de empleados eliminados */
 .centrado {
@@ -584,22 +289,28 @@
 .contenido-interno {
   width: 90%;
   background-color: #7e7b7b; 
+  background: radial-gradient(rgba(255, 255, 255, 0.5) 1px, transparent 2px) 0 0, radial-gradient(rgba(255, 255, 255, 0.5) 1px, transparent 2px) 5px 5px;
+  background-size: 15px 15px;
   border: 3px solid #000000;
   border-radius: 20px; 
   margin-top: 5px;
 }
 
-/*esto h2*/
 .texEmpl {
-  font-size:2em; 
+  font-size: 2em;
   font-weight: 300;
   text-align: center;
-  display: block;
-  line-height:1em;
-  padding-bottom: 0.5em;
-  color: #000000;
-  margin-top: 7px;
+  display: inline-block;
+  line-height: 1em;
+  padding: 10px; 
+  color: #fff;
+  margin-left: 40%;
+  margin-top: 10px;
+  background: linear-gradient(to right, #4e54c8, #8f94fb);
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
 
 /*estilos del buscador*/
 :root {
@@ -631,7 +342,6 @@ input {
 	width: 3em;
 	height: 3em;
 }
-
 .formBuscar input:invalid:not(:focus),
 .buttBuscar {
 	cursor: pointer;
@@ -763,7 +473,7 @@ input {
 .container {
  text-align: left;
  overflow: hidden;
- width: 80%;
+ width: 95%;
  margin: 0 auto;
  display: table;
  padding: 0 0 8em 0;
@@ -780,16 +490,12 @@ input {
 }
 
 .container td {
-    font-weight: normal;
-    font-size: 1em;
+  font-weight: normal;
+  text-align: center;
+  font-size: 1em;
   -webkit-box-shadow: 0 2px 2px -2px #0E1119;
      -moz-box-shadow: 0 2px 2px -2px #0E1119;
           box-shadow: 0 2px 2px -2px #0E1119;
-}
-
-.ducumentoEliminado{
-  max-width: 50px; 
-  text-align: center;
 }
 
 .motivoEliminacion {
@@ -867,4 +573,3 @@ input {
   -webkit-appearance: none;
   margin: 0;
 }
-
