--- a/src/app/components/detalle-empleado/detalle-empleado.component.css
+++ b/src/app/components/detalle-empleado/detalle-empleado.component.css
@@ -1,4 +1,6 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap');
+
 .container_principal{
     position: relative;
     top: 100%;
@@ -94,7 +96,6 @@
     flex-basis: 5%;
     flex-grow: 1; 
     background-color: #000000;
-    
   }
   
   .columna-central {
@@ -103,37 +104,29 @@
     border-radius: 20px;
   }
 
-
 /*titulo de la empresa*/
 .estilo {
   position: fixed;
   top: 0;
   right: 35%;
   transform: translateX(-50%, -50%); 
-  
   width: 400px;
   height: 60px;
   z-index: 1000;
   /*background-color: #000000;*/
 }
 
-
 .titulo-empresa{
-
   color: #ffffff;
   font: normal 140px Varela Round, sans-serif;
-
   left: 0;
   letter-spacing: 10px;
   text-align: center;
   text-transform: uppercase;
   width: 100%;
   animation: animar linear 5000ms infinite;
- 
   font-size: 40px;
   margin-top: 2px;
-  
-  
   }
 
   
@@ -207,14 +200,13 @@
   background-color: #333;
   border-radius: 20px
  }
- 
+
    .a_menu {
      color: inherit;
      text-decoration: none;
      transition: 0.25s ease;
    }
 
-   
     .a_menu_set{
         color: #ff0000;
         text-decoration: none;
@@ -237,3 +229,223 @@
      box-shadow: 0 2px 0 0 currentcolor;
 }
 	
+
+/*------------------------------*/
+
+.cont{
+  position: relative;
+  width: 95%;
+  background-color: #7e7b7b;
+  z-index: 1; 
+  border: 3px solid #000000;
+  border-radius: 20px;
+  margin-left: 20px;
+  margin-right: 10px;
+  margin-top: 10px
+}
+
+.perfil {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  margin: 0 auto;
+  font-family: Arial, sans-serif;
+}
+
+.perfil:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 80%;
+  background: linear-gradient(to right, #7e7b7b, #696767, #4e4e4e, #302d2d);
+  border-radius: 60% 35% 10px 10px;
+  bottom: 0;
+  z-index: -1;
+}
+
+.primero {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 10px;
+  width: 100%;
+}
+
+/* Imagen */
+.imagen {
+  margin-right: auto;
+  margin-left: 15px;
+}
+
+.imagen img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50px;
+  object-fit: cover;
+  box-shadow: 8px 10px 0 rgba(0, 0, 0, 0.719);
+  margin: 3px;
+  border: 5px solid #fff;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.imagen img:hover {
+  transform: scale(1.2);
+  transition: transform 0.4s ease;
+}
+
+.infoBasico {
+width: 100%;
+margin-left: 30px;
+margin-top: 30px;
+}
+
+.infoBasico > div {
+  display: flex; 
+  align-items: center; 
+  margin-bottom: 10px; 
+}
+
+/* Estilo común para los íconos */
+.infoBasico i {
+  margin-right: 5px;
+  color: #000000;
+  font-size: 24px
+}
+
+.infoBasico p {
+  font-size: 20px;
+  font-family: 'Georgia', serif;
+  color: #000000;
+  margin: 0; 
+}
+
+/* Nombre y Cargo */
+.nombre_cargo {
+  position: relative;
+  top: -20px;
+  left: auto;
+  width: 100%;
+  background-color: #eeb232;
+  opacity: 0.9; 
+  padding: 10px; 
+  border-radius: 11px;
+}
+
+.nombre_apellido {
+    font-family: 'Cinzel', serif;
+    font-weight: 900; 
+    font-size: 34px; 
+    text-transform: uppercase;
+}
+
+.cargo {
+  font-size: 24px; 
+  font-family: 'Bitter', serif;
+}
+
+.contenerdo {
+  display: flex; 
+  justify-content: space-between; 
+  align-items: flex-start;
+  width: 100%;
+  margin-top: -15px;
+  /*background: #007bff;*/
+}
+
+.texPerfil {
+  text-align: left;
+  position: relative;
+  font-family: 'Patua One', serif;
+  color: #000000; 
+  font-size: 24px;
+  margin-top: 10px;
+  font-weight: 900;
+}
+
+.texPerfil::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: rgba(0, 0, 0, 0.2); 
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+/*contenedor izquierda*/
+.izquierda {
+  flex: 2.5; 
+  padding: 5px; 
+  margin-top: -10px;
+  width: 80%;
+ /* background-color: #f0f0f0; */
+}
+
+.contened{
+  /*background-color: #b6b5b5;*/
+  border-radius: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.datos-personales, .horario-trabajo {
+  font-family: Arial, sans-serif;
+  text-align: left;
+  padding-left: 20px;
+  margin-top: 20px;
+}
+
+.datos-personales p, .horario-trabajo p {
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.993);
+  margin: 8px 0;
+}
+
+.datos-personales  strong, .horario-trabajo  strong {
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.904);
+  margin-right: 10px;
+} 
+
+/*contenedor derecha*/
+.derecha {
+  flex: 1.5; 
+  padding: 5px; 
+  margin-top: 20px;
+  width: 23%; 
+ /* background-color: rgb(70, 70, 70);*/ 
+}
+
+.diagrama{
+  /*background-color: #b6b5b5;*/
+  border-radius: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.cuentaBancaria {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  font-family: Arial, sans-serif;
+}
+
+.cuentaBancaria p {
+  margin: 8px 0;
+  font-size: 16px;
+  color: #000000;
+}
+
+.cuentaBancaria strong {
+  font-weight: bold;
+}
+
+
