Catorceavo commit, rama principal, se continúa haciendo la plantilla del componente detalles de empleado.

--- a/src/app/components/cuenta-empleado/cuenta-empleado.component.html
+++ b/src/app/components/cuenta-empleado/cuenta-empleado.component.html
@@ -89,7 +89,7 @@
                   <input class="inputnum_cuenta" type="text" name="num_cuenta_bancaria"  maxlength="37" [(ngModel)]="cuenta_b.num_cuenta_bancaria" (input)="updatenum_cuenta($event)" required/>  
                 </div>
                 
-                <label class="label_">NOMBRE DE LA ENTRIDAD</label>
+                <label class="label_">NOMBRE DE LA ENTIDAD</label>
                 <div class="cont">
                   <p class="requiered">*</p>
                   <input class="inputnom_banco" type="text" name="nom_banco" [(ngModel)]="cuenta_b.nom_banco"  (input)="updatInputNom_banco($event)" required /><br>
