--- a/src/app/components/horas-extras/horas-extras.component.html
+++ b/src/app/components/horas-extras/horas-extras.component.html
@@ -104,7 +104,7 @@
                             </form >
                             <div class="botones-container">
                                 <!--button class="buttlimpiar" id="botonlimbiar">limpiar</button-->
-                                <button (click)="registrarHoras()"  class="buttenviar" id="botonEnviar">Guardar Asistencia </button>
+                                <button (click)="registrarHoras()"  class="buttenviar" id="botonEnviar">Guardar</button>
                             </div>
                         </div>
                     </div>
